[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/fonts/font_dialog.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/frames/ui_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/headshots.png" type="Texture" id=3]
[ext_resource path="res://Game/Announcer.gd" type="Script" id=4]
[ext_resource path="res://ui/fonts/font_square_mini.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.4, 0.454902, 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[node name="Announcer" type="PanelContainer"]
margin_right = 512.0
margin_bottom = 256.0
rect_min_size = Vector2( 512, 256 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 494.0
margin_bottom = 238.0

[node name="Title" type="Label" parent="Body"]
margin_right = 476.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "COMMS - INCOMING - ADMIN"
align = 1
valign = 3

[node name="Message" type="HBoxContainer" parent="Body"]
margin_top = 24.0
margin_right = 476.0
margin_bottom = 138.0
custom_constants/separation = 16

[node name="PilotInfo" type="VBoxContainer" parent="Body/Message"]
margin_right = 129.0
margin_bottom = 114.0

[node name="Portrait" type="MarginContainer" parent="Body/Message/PilotInfo"]
margin_right = 129.0
margin_bottom = 80.0

[node name="PilotFace" type="TextureRect" parent="Body/Message/PilotInfo/Portrait"]
margin_right = 129.0
margin_bottom = 80.0
texture = SubResource( 3 )
stretch_mode = 6

[node name="PilotName" type="Label" parent="Body/Message/PilotInfo"]
margin_top = 84.0
margin_right = 129.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "PILOT NAME"
align = 1

[node name="Text" type="Label" parent="Body/Message"]
margin_left = 145.0
margin_top = 38.0
margin_right = 476.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Announcer Text"
autowrap = true

[node name="Tween" type="Tween" parent="."]
